--- a/registros.html
+++ b/registros.html
@@ -20,7 +20,7 @@
             <button onclick="selectValue(2)"> Urithiru </button>
             <button onclick="selectValue(3)"> Fabriales </button>
             <button onclick="selectValue(4)"> Investidura </button>
-            <button onclick="selectValue(5)"> Roshar </button>
+            <button onclick="selectValue(5)"> Bestias </button>
             <button onclick="selectValue(6)"> Diario </button>
         </div>
         
@@ -97,39 +97,105 @@
             <section id="Urithiru">
                 <div class="center">
                     <article class="articulo none">
-                        <h3 class="center lineaDeTexto">Ashertmarn:</h3>
-                        <p>En otro tiempo fue un spren del control y la elegancia, desde que Odium comenzó a tocar las notas de este mundo, las cosas han cambiado.</p>
-                        <p>Creo y afirmo que los Heraldos ya habían jugado con los poderes de la investidura, de alguna forma forzaron su conexión para conseguir una longevidad ampliada o rejuvenecimiento, sé que los registros los describen más jóvenes de lo que se ven actualmente.</p>
-                        <P>He escuchado del término esquirla del amanecer, pero no sé cómo puede estar relacionada con ellos.</P>
-                        <p>También estoy seguro de que estos no fueron los responsables de la destrucción de Aimia, ellos estuvieron ocultos, avergonzados de lo que hicieron con nuestro planeta real, perdidos por Roshar, de hecho, puede que ni siquiera tengan que alimentarse, no he visto alimentarse a Talenel durante el periodo que hemos estado en el frente, y no es un heraldo dependiente de la investidura como son otros…</p>
-                        <p>Luego de la masacre de Aimia es que fueron llegando de a poco, Jezrien fue el primero en llegar a intentar dar orden a la humanidad, desde luego los habitantes de Shinovar decidieron que habíamos llegado demasiado lejos.</p>
-                        <p>Sabemos que los shin solo participaran en las desolaciones cuando los parshendi lleguen a sus territorios. Mientras sus fronteras no estén en peligros dejaran que el resto de la humanidad se extinga.</p>
-                        <p>Jezrien acepto y dio su visto bueno, incluso exigió que jamás otorguen su tecnología al resto de naciones, personalmente me parece un castigo demasiado grande pero tal vez haya sido sabio al privar de armas tan poderosas al enemigo.</p>
+                        <h3 class="center lineaDeTexto">Urithiru:</h3>
+                        <p>Luego de un milenio la llegada humana y quinientos años de desolaciones Honor y Cultivación decidieron crear la torre. La creación de la torre llego en buen momento para recargar de animo nuestras esperanzadas y fuerzas.</p>
+                        <p>Pudo llegar mucho antes, y no nos hubiéramos quejado.</p>
+                        <p>Ahora la torre es el lugar central de las fuerzas humanas, desde la estructura cuidamos el continente. Y gracias a sus fabriales hemos podido renovar nuestra fuerzas, ánimos y producción.</p>
+                        <p>Antes de esta torre el colapso tecnológico nos había alcanzado, he leído documentos donde se mencionan armas de polvo negro y gran alcance. Nuestras armas ahora solo son espadas y fuertes arcos. Tal vez en el futuro consigamos crear esas armas nuevamente.</p>
                         <br/>
 
-                        <h3 class="center lineaDeTexto">Ba-Ado-Misharam:</h3>
-                        <p>Fue la hija de las formas, la encargada de enseñar a los Oyentes su cultura y como cambiar, que sprens eran necesarios para hacer las cosas bien. Ahora ya no enseña, posee, domina y cambia.</p>
-                        <P>Su necesidad es buscar nuevas formas, el conocimiento no le basto y quiso crear… es poderosa desde luego. Si esta guerra no concluye pronto, hay planes que la involucran…</P>
+                        <h3 class="center lineaDeTexto">El Primo:</h3>
+                        <p>Conociendo el trabajo realizado por Honor y Cultivación para crear un nuevo spren capaz de unirse a un forjador de vínculos llevamos cerca de medio siglo trabajando el nuestro. Desde luego sus capacidades son limitadas, pero permite guardar información utilizando propiedades de la investidura.</p>
+                        <P>Incluso utilizar sistemas de monitoreo del edificio, no podemos hacer controles tan delicados como el hermano, pero permite ver los niveles de temperatura, oxigeno o temperatura.</P>
                         <br/>
 
-                        <h3 class="center lineaDeTexto">Chemoarish:</h3>
-                        <p>Fue el spren de la erosión y fin, una especie de RUINA, pero de Roshar.</p>
-                        <P>Antes disponía de poder metafórico, ahora lo que posee es una variante de la potencia <b>progresión</b> pero al revés, de aluna forma cuando entra en contacto contigo congela los daños de tu cuerpo, una herida no se curara al menos que se utilicen cantidades absurdas de investidura, el dolor remitirá, y los huesos no se curara.</P>
-                        <p>Su patrón de movimiento es realmente extraño hay informes de que ha caminado hasta el Origen, allí donde no hay nada que pueda lastimar… o ¿sí?</p>
-                        <p>Se sabe que no tiene conciencia, pero tal vez la evolución de Odium le diera pensamiento accidentalmente y se niegue a servirle.</p>
+                    </article>
+                    <article class="none">
+                        <div class="center" >
+                            <img src="./images/Registros/Titulo_OdiumYLaCaida.png">
+                        </div>
+                        <img class="registroRoshar" src="./images/Registros/Odium y la caida.png">
+                    </article>
+                </div>
+            </section>
+
+            <section id="Fabriales">
+                <div class="center">
+                    <article class="articulo none">
+                        <h3 class="center lineaDeTexto">Fabriales:</h3>
+                        <p>Desde que hemos llegado a este planeta el acceso a la investidura es un regalo por lo que parece, se dice que en Shinovar han podido disfrutar de grandes mejores para su gente aun que las comparten con nosotros.</p>
+                        <p>De momento, nuestros conocimientos limitados han permitido crear fabriales que detecten seres vivos, también permiten un seguimiento y comunicación rápida, aunque falta un método eficiente de transmitir información, de momento tenemos el prototipo de vincula cañas, su versión final debería permitir dejar escrito mensajes sin que estuviera la otra persona atendiendo, pero es funcional.</p>
+                        <p>Otra de nuestras grandes obras es el fabrial de seguridad que hemos creado para esta sala, el mismo usa elementos muy complejos y gran variedad de metales para crear espinas de cuarzo, con un cuerpo esférico y ayuda de la habitación, se le puede indicar en qué dirección moverse para atacar, si tenemos éxito podremos crear un sistema autónomo que detecte movimiento por sí mismo y usarlo en la guerra.</p>
+                        <p>Donde hemos tenido éxito, es el fabrial de progresión, no utiliza la potencia por desgracia, pero fortalece al portador, transmite investidura al humano eso fortalece su vínculo con el plano espiritual, acelerando la curación de la persona, desde luego es nuestro mejor avance, para la siguiente desolación vamos a poder implementarlo entre la gente de a pie permitiendo que sobrevivan sin tantos daños por los constantes ataques.</p>
+                        <br/>
+
+
+                    </article>
+                    <article class="none">
+                        <div class="center" >
+                            <img src="./images/Registros/Titulo_OdiumYLaCaida.png">
+                        </div>
+                        <img class="registroRoshar" src="./images/Registros/Odium y la caida.png">
+                    </article>
+                </div>
+            </section>
+
+            <section id="Investidura">
+                <div class="center">
+                    <article class="articulo none">
+                        <h3 class="center lineaDeTexto">Investidura:</h3>
+                        <p>Llevamos cerca de un siglo investigando como utilizar la investidura, sin la presencia de vinculo spren-humano es imposible.</p>
+                        <p>Las criaturas del planeta se pueden vincular con sprens simples para mejorar una de sus características, vincularte con mandras causa que tu relación de peso con el planeta se reduzca, esto es lo que permite vivir a los Abismodides y a los Lancer.</p>
+                        <p>Un vínculo con fuegosprens permite ser menos susceptible a los cambios de temperatura, y los vidaspren causan un envejecimiento más lento en los seres vivos.</p>
+                        <p>Sabemos que los Oyentes se pueden vincular con sprens de un rango superior que les permite usar una potencia, mi investigación esta orientada a conseguir crear un fabrial que pueda utilizar la potencia de la progresión, esto permitirá que nuestros civiles no mueran, que nuestros enfermos se curen y que nuestros ancianos puedan alargar la vida.</p>
+                        <p>Hasta el momento no he tenido éxito, pero sé que se pueda realizar de alguna forma.</p>
+                        <br/>
+
+
+                    </article>
+                    <article class="none">
+                        <div class="center" >
+                            <img src="./images/Registros/Titulo_OdiumYLaCaida.png">
+                        </div>
+                        <img class="registroRoshar" src="./images/Registros/Odium y la caida.png">
+                    </article>
+                </div>
+            </section>
+
+            <section id="Bestias">
+                <div class="center">
+                    <article class="articulo none">
+                        <h3 class="center lineaDeTexto">Los parshendi:</h3>
+                        <p>Los parshendi son los nativos del planeta poseen multitud de formas de poder, pues utilizan la tormenta catalizadora de investidura al vincularse con un nuevo spren, parece ser que llenan tanto su gema corazón que atrapan en ella a un spren vivo.</p>
+                        <p>Cuando tienen a un spren en su corazón, el resto del cuerpo se modifica acorde a las características del spren, pero les cuesta atraer sprens, los humanos los tenemos alrededor casi sin dificultad alguna, incluso llega a ser molesto que los demás sepan que te está pasando por la cabeza.</p>
+                        <p>Con sus formas de poder son muy diestros pues no suelen cambiarlas a menudo y se especializan en ellas, a veces para pasar horas bajo el océano, otras para volar, incluso tienen una forma que permite acelerar el crecimiento y curación de lo vivo.</p>
+                        <p>Durante los milenios de guerra han avanzado casi hasta donde nos encontramos tecnológicamente, de hecho, tienen el mismo nivel que nosotros actualmente. Tienen acero para sus armas.</p>
+
+                        <br/>
+
+                        <h3 class="center lineaDeTexto">Los abismoides:</h3>
+                        <p>Durante las guerras más allá de lago puro empiezan a haber abismoides, son descrito como criaturas de catorce patas con cuatro brazos, cabeza de flecha y coraza morada. Creemos que son una civilización, pues están vinculados con sprens que permiten mantener el peso de la bestia sin perder agilidad o destreza, son resistentes y casi tan peligrosos como los tronadores.</p>
+                        <p>Son seres carnívoros que se alimentan de chulls y espinas blancas, sus civilizaciones deben de estar muy al este si todavía no hemos podido encontrarlas</p>
+                        <p></p>
+
+                        <br/>
+
+                        <h3 class="center lineaDeTexto">Los lancer:</h3>
+                        <p>Son unas bestias horrorosas para combatir, pueden drenar nuestra investidura y son realmente gigantes casi como un abismoide de 20 metros de largo, suelen aparecer poco en los combates, pero cuando lo hacen nos dejan peleando con palos, mientras ellos continúan pudiendo utilizar sus poderes.</p>
+                        <p>Habitan en las islas Aimia, sus cuerpos tienen cabezas en forma de flechas y multitud de patas, son anfibios, pero no pasan mucho tiempo en el agua, necesitan estar mucho tiempo en la superficie y aun que puedan parecer lentos no lo son, los vínculos con los mandras le dan una agilidad imposible para su peso.</p>
+                        <P>Son seres completamente carnívoros y pueden esperar durante semanas en un mismo lugar para sorprender.</P>
                         <br/>
 
                         
-                        <h3 class="center lineaDeTexto">Dai-Gonarthis:</h3>
-                        <p>Este deshecho antes fue la sprenificacion de la muerte, se encarga de guiar a los muertos de que tuvieran tiempo conocer el proceso de morir, que estuvieran cómodos incluso podía otorgar una pequeña parte de investidura para comprender que sucedía y el pasaje al más allá fuera cómodo, algunos dicen que los vivos podían recibir los mensajes de los muertos.</p>
-                        <p>Este ser tan amable, fue roto por Cultivación y Odium cuando crearon el pacto de Braize, no podían permitir que todas las almas fueran al más allá, tuvieron que modificarlo, pero Odium le lastimo profundamente con el tiempo. El ciclo de revivir Fusionados termino destruyéndole. Ahora no es más que una criatura que toma la investidura de los muertos y los despacha rápidamente a su lugar sea el plano espiritual o a Braize.</p>
+                        <h3 class="center lineaDeTexto">Los tai-na:</h3>
+                        <p>El planeta tiene multitud de particularidades, una de ellas son estas bestias gigantes que llegan a medir fácilmente más de cien metros de alto, tienen patas muy largas y viven en el agua, son un pariente lejano de los abismoides.</p>
+                        <p>Sus cuerpos son enormes, llegan a tener flora y fauna sobre su espalda, tanto así que se ha comenzado a establecer pequeñas poblaciones para estudiar los patrone migratorios.</p>
+                        <p>La información que hemos obtenido de momento identifica patrones cíclicos para las criaturas estudiadas. Incluso las profundidades corroboran las rutas que toman, pues el coral esta poco crecido en curvas muy específicas como si fueran caminos submarinos.</p>
                         <br/>
 
-                        <h3 class="center lineaDeTexto">Moelach:</h3>
-                        <p>Fue la biblioteca de Roshar, tenía recuerdos del pasado.</p>
-                        <p>Antes de la corrupción de Odium, el spren guardaba momentos en su interior, cuando las personas necesitaban respuestas acudían al spren para encontrar respuestas en los recuerdos de grandes pensadores del Roshar.</p>
-                        <p>Este spren era muy visitado por reyes y lideres, pero las personas de a pie podía pedir su ayuda y encontrar respuestas.</p>
-                        <p>Odium le corrompió para dejarlo inútil y así debilitar los gobiernos de los oyentes, comenzó a dar visiones del futuro terrible, el mismo spren comenzó a de si nueva maldición y se ocultó en las profundidades, ahora su presencia solo es sentida en los últimos instantes de muerte</p>
+                        <h3 class="center lineaDeTexto">Los Santhid:</h3>
+                        <p>Estas criaturas tienen un ojo gigante y variedad de tentáculos, parecen ser pulpos con una coraza en la cabeza, sus migraciones son una gran distancia, pero van hacia el norte, luego regresan a los océanos de Roshar.</p>
+                        <p>Las estaciones irregulares de Roshar no afectan sus movimientos migratorios, a diferencia del llanto que si lo hace.</p>
                         <br/>
                     </article>
                     <article class="none">
@@ -187,8 +253,12 @@
         let articuloOdium = document.getElementById("Odium")
         let articuloLosDeshechos = document.getElementById("Los10Deshechos")
         let articuloUrithiru = document.getElementById("Urithiru")
+        let articuloFabriales = document.getElementById("Fabriales")
+        let articuloInvestidura = document.getElementById("Investidura")
+        let articuloBestias = document.getElementById("Bestias")
         let articuloOther = document.getElementById("Other")
-        const vectorArticulos = [articuloOdium, articuloLosDeshechos, articuloUrithiru, articuloOther, articuloOther, articuloOther, articuloOther]
+
+        const vectorArticulos = [articuloOdium, articuloLosDeshechos, articuloUrithiru, articuloFabriales, articuloInvestidura, articuloBestias, articuloOther]
 
 
 
@@ -204,6 +274,7 @@
 
             let nivelConexion = Number(sessionStorage.getItem("NivelConexion")) || 0
             vectorArticulos.forEach((articulo, index) => {
+                console.log(articulo)
                 if(index === number){
                     articulo.classList.remove("none")
                     console.log(articulo.childNodes[1].childNodes)
