add last price of info

--- a/registros.html
+++ b/registros.html
@@ -84,6 +84,34 @@
                         <p>Este spren era muy visitado por reyes y lideres, pero las personas de a pie podía pedir su ayuda y encontrar respuestas.</p>
                         <p>Odium le corrompió para dejarlo inútil y así debilitar los gobiernos de los oyentes, comenzó a dar visiones del futuro terrible, el mismo spren comenzó a de si nueva maldición y se ocultó en las profundidades, ahora su presencia solo es sentida en los últimos instantes de muerte</p>
                         <br/>
+
+                        <h3 class="center lineaDeTexto">Nergaoul:</h3>
+                        <p>Era la tranquilidad, caminaba hasta los lugares de mayor conflicto y más sangrientos para tranquilizar a los involucrados sus caminar era lento por lo que podía tardar en llegar, pero era efectivo, cuando él llegaba era posible establecer treguas y pactos que evitaran conflictos.</p>
+                        <p>Como es costumbre de Odium, uso todas las características útiles,	 pero altero su principio, ahora genera guerras y violencia a donde va, y siempre se dirige hacia las guerras más violentas.</p>
+                        <br/>
+
+                        <h3 class="center lineaDeTexto">Re-Shephir:</h3>
+                        <p>Antes fuer la madre de los sprens, alrededor de ella nación y aparecían pequeños sprens de todo tipo incluso se dice que los más raros hacían acto de presencia, su caminar era bienvenido por todas las partes de este mundo, pero fue tentada con el conocimiento.</p>
+                        <p>Dejo de estar satisfecha con atraer sprens a este mundo, y comenzó a desear poder crear sprens, Odium respondió a su pedido, pero esta está vacía, no puede sentir. Solo imita lo que otros hacen y aparentan sentir.</p>
+                        <br/>
+
+                        <h3 class="center lineaDeTexto">Sja-anat:</h3>
+                        <p>Fue la Medium de Roshar y vive entre dos mundos, el plano físico y el plano cognitivo. Este mundo tiene nueve spres radiantes que han creado sociedades al igual que lo han hecho los Parshendis.</p>
+                        <p>El planeta tiene dos perpendicularidades, es probable que las esquirlas recibieran alguna pedida para facilitar la comunicación y comercio entre ambos mundos.</p>
+                        <p>Odium la altero para poder controlar información entre ambos planos, pero el proceso de medicación le dio suficiente investidura para modificar la conexión de las cosas, tenemos teorías de que podría llegar a modificar la conexión de humanos…</p>
+                        
+                        <h3 class="center lineaDeTexto">Yelig-nar:</h3>
+                        <p>En tiempos pasado eran unos pequeños parásitos que permitían la unión de spren y Oyente de forma rápida por un corto periodo de tiempo. Esta especie extinta, permitía a los Oyentes aprender y conocer nuevas formas de poder sin tener que esperar a una Tormenta.</p>
+                        <p>Esta especie fue corrompida y llevada a la extinción hasta el último de los suyos, el cual ahora es un desecho. Se le ha alimentado con sprens radiantes y Sja-anat modifico su conexión según teorizamos.</p>
+                        <p>Es por esto por lo que puede vincular a su portador con nueve potencias, también crea una micro perpendicularidad en el interior del huésped, de esta forma consigue utilizar potencias durante periodos de tiempo extensos.</p>
+
+                        <h3 class="center lineaDeTexto">La Fuente:</h3>
+                        <p>Este ser fue una larking y a día de hoy mantiene el cuerpo de uno, aunque tenga grandes alteraciones, la mayor ventaja que otorgan los larkins al ejército parshedi es la capacidad de drenar la investidura de oponente.</p>
+                        <p>Conociendo esto, nos envió a capturar uno vivo y joven.</p>
+                        <p>Se le alimento con luz tormentosa y del vacío, causando que mute ayudado de Sja-anat, el resultado es un Larking capaz de emitir luz tormentosa, es una perpendicularidad en sí mismo que nunca se cierra, esta criatura no es solo un portal, también es más grande que las demás y es fuerte.</p>
+                        <p>Está vinculado con Mandras corruptos y otros sprens que no hemos identificado, estos son mas recientes.</p>
+
+                        <br/>
                     </article>
                     <article class="none">
                         <div class="center" >
